# jobfinder_crew

./: .gitignore  docker-compose.yml  init.sql  jobhunt_crew_fullstack_guide.md
backend/: Procfile  main.py  models.py  pyproject.toml  requirements.txt  start_worker.bat  tasks.py  worker.py
backend/job_finder_crew/: README.md  pyproject.toml
backend/job_finder_crew/src/job_finder_crew/: crew.py  main.py
backend/job_finder_crew/src/job_finder_crew/config/: agents.yaml  tasks.yaml
frontend/: package-lock.json
frontend/app/: page.tsx
frontend/app/results/[id]/: page.tsx
frontend/app/search/[id]/: page.tsx
