[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "fastapi>=0.138.1",
    "redis>=8.0.1",
    "uvicorn>=0.49.0",
    "crewai[tools]==1.14.7",
    "pydantic>=2.12.5",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.51",
    "postgres>=4.0",
]
