[project]
name = "job_finder_crew"
version = "0.1.0"
description = "job_finder_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.7",
    "pydantic>=2.12.5",
]

[project.scripts]
job_finder_crew = "job_finder_crew.main:run"
run_crew = "job_finder_crew.main:run"
train = "job_finder_crew.main:train"
replay = "job_finder_crew.main:replay"
test = "job_finder_crew.main:test"
run_with_trigger = "job_finder_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
